# SimplePlotDigitizer

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: -python-app.yml  python-app.yml
PlotScan/: __init__.py  __main__.py  core.py  geometry.py  grid.py  points.py  trajectory.py
SimplePlotDigitizer/: __init__.py  __main__.py  core.py  grid.py
plotdigitizer/: plotdigitizer.py
tests/: __init__.py  test_cli.py
