[metadata]
name = PlotScan
author = Eftal Gezer
author_email = eftal.gezer@astrobiyoloji.org
version = 0.1.0
description = A Python command line utility to digitize plots in batch mode.
url = https://github.com/eftalgezer/PlotScan
license = GPLv3+

[options]
packages = PlotScan
entry_points =
    [console_scripts]
    PlotScan = PlotScan.__main__:main
